--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
 :root {
     font-family: "Raleway", sans-serif;
     background: #4B1E16;
-
+    width: 100%;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    width: 100%;
+}
+
 a:hover {
   color: #535bf2;
 }
