--- a/src/pages/servives/services.css
+++ b/src/pages/servives/services.css
@@ -46,6 +46,8 @@
   align-items: center;
   width: 100%;
   max-width: 220px;
+  border: 2px solid #4B1E16;
+
 }
 
 .capability-card img {
@@ -60,7 +62,7 @@
 .capability-card h2 {
   font-size: 1.08rem;
   font-weight: 700;
-  color: #222;
+  color: #4B1E16;
   margin: 0 10px;
   margin-top: 6px;
   margin-bottom: 0;
