--- a/src/pages/explore/explore.css
+++ b/src/pages/explore/explore.css
@@ -91,7 +91,7 @@
 
 .project-image img {
   width: 350px;
-  height: 230px;
+  height: 90%;
   object-fit: cover;
   border-radius: 10px;
 }
@@ -137,10 +137,6 @@
     font-size: 2.5rem;
   }
 
-  .card-title {
-    font-size: 1.5rem;
-  }
-
   .card-content {
     font-size: 1rem;
   }
@@ -149,11 +145,17 @@
 }
   .project-card{
     padding: 0.5rem;
+    flex-direction: column;
   }
-  .project-image img {
-  width: 150px;
-  height: 150px;
+  .project-card.reverse {
+  flex-direction: column;
 }
+ .project-image img {
+  width: 300px;
+  height: 100%;
+}
+
+
 }
 
 @media (max-width: 480px) {
@@ -169,7 +171,4 @@
     font-size: 1.75rem;
   }
 
-  .card-title {
-    font-size: 1.3rem;
-  }
 }
